* Users may now bypass the built-in param, init, and control functions altogether
  for original ICM and network models, because the definition of new and
  replacement modules occurs within the control functions themselves. The
  existing control functions should be used as a template if one is considering
  replacing these parameterization functions.

BUG FIXES
* Minor updates and bug fixes to the two built-in Shiny applications (accessed
  via the epiweb function). These apps now benefit from the more stable
  parameterization functions mentioned above.
* Updated the print method for the param.net class to handle parameters that are
  lists or data frames.

OTHER
* Added new test cases for running new DCMs, ICMs, and network models, following
  the vignette examples.


Version 1.0.2
------------------------------------------------------------------------------

INTERFACE CHANGES
* The trans.rate and trans.rate.g2/m2 parameters have been renamed to inf.prob
  and inf.prob.g2/m2 to better characterize that they are probabilities, rather
  than rates, and towards infection of persons in that group/mode.
* Added new documentation for newly exported utility functions for network models,
  mostly used in the birth/entry modules. Now users may directly edit these
  modules and use the utility functions without explicitly adding them to the
  global environment.
* Added warning message for network models in which there is a vertex attribute
  for status added to the network but not referenced in the formation formula,
  in which case the initial conditions for status will still be derived from the
  input for init.net. This does not apply to "serosorting models", which reference
  status in the formation formula, and which require setting status as a vertex
  attribute on the network before calling netest.

BUG FIXES
* Network models with passed network attributes in the formation formula in open